
  * util-logging: Allow users to override `c.t.util.logging.Logger` installation,
    making it easier to work with SLF4J bridges. ``RB_ID=870684``

Bug Fixes:

  * util-core: `c.t.io.InputStreamReader` and `Readers` created by
    `c.t.io.Reader.fromFile` and `fromStream` now close the underlying
    `InputStream` on reading of EOF and on calls to `Reader.discard`.
    ``RB_ID=873319``

6.37.0  2016-09-07

New Features:

  * util-app: Introduce `c.t.app.Flag.letClear` allowing flags to be unset.
    ``RB_ID=868177``

6.36.0  2016-08-25

New Features:

  * util-core: `c.t.util.FuturePool` now optionally exposes metrics on
    their internal state such as active tasks, and completed tasks.
    ``RB_ID=850652``

  * util-core: Add a system property
    `com.twitter.concurrent.schedulerSampleBlockingFraction` that can be
    set to a value between 0.0 and 1.0 (inclusive). When the Scheduler
    runs blocking code, it will log the stacktrace for that fraction of
    the calls. ``RB_ID=861892``

  * util-core: Add Java-friendly API for `StorageUnit`. See `StorageUnit.fromX`
    and `StorageUnit.{times, plus, minus, divide}` methods. ``RB_ID=864546``

Changes in Runtime Behavior:

  * util-eval: The compiler reporter is now reset between code check invocations.
    This means that when there is a failure that it is no longer required to reset
    the entire state to recover and that already compiled and loaded classes can still
    be used. ``RB_ID=859878``

6.35.0  2016-07-07

Changes in Runtime Behavior:

  * util-codec: StringEncoder no longer depends on apache commons-codec, and
    decode will now throw an exception when it fails to decode a byte, instead
    of failing silently. ``RB_ID=833478``

  * util-collection: LruMap is now backed by jdk LinkedHashMap instead of apache
    collections LRUMap. ``RB_ID=833515``

  * util-core: `com.twitter.util.NonFatal` is now implemented by Scala's
    `scala.util.control.NonFatal`. This changes behavior such that